--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -42,7 +42,7 @@ figure.thumbnails img {
 }
 
 :root {
-  --code-font-family: "Iosevka Term Curly Slab", "Source Han Sans SC", "Source Han Sans TC", "Source Han Sans HC", "Source Han Sans CN", "Source Han Sans TW", "Source Han Sans HK", "PingFang SC", "Microsoft YaHei", sans-serif;
+  --code-font-family: "Iosevka Fixed Slab", "Source Han Sans SC", "Source Han Sans TC", "Source Han Sans HC", "Source Han Sans CN", "Source Han Sans TW", "Source Han Sans HK", "PingFang SC", "Microsoft YaHei", sans-serif;
   --heading-h2-border-color: var(--mono-tint2);
   --heading-h2-border-width: 0 0 0 0;
   --heading-h2-padding: 0 0 0 0;
@@ -100,7 +100,7 @@ figure.thumbnails img {
 }
 
 .custom-font {
-  font-family:  "Iosevka Term Curly Slab", "Courier New",
+  font-family:  "Iosevka Fixed Slab", "Courier New",
                 "Source Han Serif SC", "Source Han Serif TC", "Source Han Serif HC", "Source Han Serif CN", "Source Han Serif TW", "Source Han Serif HK",
                 "Source Han Sans SC", "Source Han Sans TC", "Source Han Sans HC", "Source Han Sans CN", "Source Han Sans TW", "Source Han Sans HK",
                 "PingFang SC",
@@ -110,7 +110,7 @@ figure.thumbnails img {
 
 .custom-font-table {
   font-size: xx-small;
-  font-family:  "Iosevka Term Curly Slab", "Courier New",
+  font-family:  "Iosevka Fixed Slab", "Courier New",
                 "Source Han Serif SC", "Source Han Serif TC", "Source Han Serif HC", "Source Han Serif CN", "Source Han Serif TW", "Source Han Serif HK",
                 "Source Han Sans SC", "Source Han Sans TC", "Source Han Sans HC", "Source Han Sans CN", "Source Han Sans TW", "Source Han Sans HK",
                 "PingFang SC",
