--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -181,6 +181,16 @@ figure.thumbnails img {
   color: #0074E8;
 }
 
+.emphasis-point {
+  font-weight:normal;
+  text-emphasis:'•';
+  -webkit-text-emphasis:'•';
+  -moz-text-emphasis:'•';
+  text-emphasis-position:under;
+  -webkit-text-emphasis-position:under;
+  -moz-text-emphasis-position:under
+}
+
 body {
   font-family:  "EB Garamond",
                 "Source Han Serif SC", "Source Han Serif TC", "Source Han Serif HC", "Source Han Serif CN", "Source Han Serif TW", "Source Han Serif HK",
