--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -62,6 +62,14 @@ figure.thumbnails img {
     box-shadow: 0 2px 6px rgba(0,0,0,0.1), 0 4px 12px rgba(0,0,0,0.15);
 }
 
+.sidebar {
+    font-family:"Iosevka Fixed Slab", "Courier New",
+                "Source Han Serif SC", "Source Han Serif TC", "Source Han Serif HC", "Source Han Serif CN", "Source Han Serif TW", "Source Han Serif HK",
+                "Source Han Sans SC", "Source Han Sans TC", "Source Han Sans HC", "Source Han Sans CN", "Source Han Sans TW", "Source Han Sans HK",
+                "PingFang SC",
+                "Microsoft YaHei",
+                sans-serif;
+}
 .sidebar-nav a:hover {
     text-decoration: none;
     font-weight: 700;
